# TraceForge

./: .gitignore  LICENSE  README.md  claude.md  claude_1.md  claude_2.md  pyproject.toml
.github/workflows/: ci.yml
examples/mock_responses/: calculator.json  weather.json
examples/prompts/: calculator.txt  weather.txt
examples/scenarios/: calculator_agent.yaml  multi_step_fail.yaml  simple_chat.yaml  weather_agent.yaml
src/traceforge/: __init__.py  attribution.py  cli.py  evaluator.py  fuzzer.py  harness.py  history.py  html_report.py  invariants.py  judge.py  loader.py  minrepro.py  mock_tools.py  models.py  mutators.py  replay.py  reporter.py  trace_ir.py  trace_store.py  utils.py
tests/: conftest.py  test_attribution.py  test_evaluator.py  test_fuzzer.py  test_harness.py  test_history.py  test_invariants.py  test_judge.py  test_loader.py  test_minrepro.py  test_mock_tools.py  test_models.py  test_mutators.py  test_replay.py  test_reporter.py  test_trace_ir.py  test_trace_store.py
